# WulkanGrafika

./: .gitattributes  .gitignore  CMakeLists.txt  Dx01_Tree_T1_Low_v1.fbx  ExportedFont.tga  Makefile  README.md  SnowTree.fbx  all.fbx  camera.cpp  f_particles.glsl  f_simplest.glsl  f_specular.glsl  floor.fbx  gkiw_st_11a_win.vcxproj  gkiw_st_11a_win.vcxproj.filters  lava.fbx  main_file  main_file.cpp  models.cpp  money.fbx  particles.cpp  shaderprogram.cpp  test_floor.fbx  uploads_files_2011258_Volcano.mtl  v_particles.glsl  v_simplest.glsl  v_specular.glsl  vulcano.fbx  vulkan.fbx
Libraries/assimp/: assimp-vc142-mt.lib
assets/Pliki_Blender/: czasteczka.blend  czasteczka.blend1  wulkan_lawa_teren.blend  wulkan_lawa_teren.blend1
assets/models/: Others.fbx  kostka.fbx  particle.fbx  test.fbx  trex.fbx  wulkan.fbx  wulkan.mtl  wulkan_and_floor.fbx
assets/textures/: Ramas Nieve.png~
src/: Makefile  f_bloom.glsl  f_blur.glsl  f_default.glsl  f_framebuffer.glsl  f_simplest.glsl  g_default.glsl  main_file  main_file.cpp  v_bloom.glsl  v_default.glsl  v_simplest.glsl
x64/Debug/: gkiw_st_11a_win.exe.recipe  gkiw_st_11a_win.ilk  gkiw_st_11a_win.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/gkiw_st_11a_win.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gkiw_st_11a_win.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: gkiw_st_11a_win.exe.recipe  gkiw_st_11a_win.iobj  gkiw_st_11a_win.ipdb  gkiw_st_11a_win.vcxproj.FileListAbsolute.txt
x64/Release/gkiw_st_11a_win.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gkiw_st_11a_win.lastbuildstate  gkiw_st_11a_win.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
